--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Login</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Welcome</h1>
-        Welcome! You can login here!
+        <div class="container">
+            <h1>Welcome</h1>
+            Welcome! You can login here!
+            <button class="btn btn-primary" type="button" name="button">Login</button>
+        </div>
+        <div class="jumbotron">
+            <h1>Welcome!</h1>
+        </div>
     </body>
 </html>
