--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         
         {% load static %}
-        <link rel="stylesheet" href="{% static 'accounts/style.css' %}" type="text/css"
+        <link rel="stylesheet" href="{% static 'accounts/style.css' %}" type="text/css">
     </head>
     <body>
         <div class="container">
@@ -17,5 +17,13 @@
         <div class="jumbotron">
             <h1>Welcome!</h1>
         </div>
+        <h1>
+            {{ myName }}
+        </h1>
+        <ul>
+            {% for number in numbers %}
+            <li>{{ number }}</li>
+            {% endfor %}
+        </ul>
     </body>
 </html>
