[session 13]: Build the Django base HTML template

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -13,8 +13,28 @@
             crossorigin="anonymous">
         </head>
         <body>
-            {% block body %}
-            <h1>Base</h1>
-            {% endblock %}
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Marvelus</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="../navbar/">Register</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </nav>
+            <div class="container" id="main" style="margin-top: 50px;">
+                {% block body %}
+                <h1>Base</h1>
+                {% endblock %}
+            </div>
         </body>
     </html>
