--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -22,11 +22,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Marvelus</a>
+                    <a class="navbar-brand" href="/">Marvelus</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="../navbar/">Register</a></li>
+                            <li><a href="/account/register">Register</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
