--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 <h1>Profile page</h1>
 
 {% block head %}
-<title>Profile</title>
+<title>View Profile</title>
 {% endblock %}
 {% block body %}
 <p>
