--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -1,40 +1,49 @@
 
-    <!Doctype html>
-    <html>
-        <head>
-            {% block head %}
+<!Doctype html>
+<html>
+    <head>
+        {% block head %}
 
-            <meta charset="utf-8">
-            <title></title>
-            <link rel="stylesheet" href="">
-            {% endblock %}
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-            crossorigin="anonymous">
-        </head>
-        <body>
-            <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container">
-                    <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Marvelus</a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/account/register">Register</a></li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" href="">
+        {% endblock %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+        crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Marvelus</a>
                 </div>
-            </nav>
-            <div class="container" id="main" style="margin-top: 70px;">
-                {% block body %}
-                <h1>Base</h1>
-                {% endblock %}
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="/accounts">Home</a></li>
+                        <li><a href="/accounts/profile">Profile</a></li>
+                        <li><a href="/accounts/profile/edit">Edit Profile</a></li>
+                        <li><a href="/accounts/change-password">Change Password</a></li>
+                        <li><a href="/accounts/reset-password">Reset Password</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/accounts/register">Register</a></li>
+                        <li><a href="/accounts/login">Login</a></li>
+                        <li><a href="/accounts/logout">Logout</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
-        </body>
-    </html>
+        </nav>
+        <div class="container" id="main" style="margin-top: 70px;">
+            {% block body %}
+            <h1>Base</h1>
+            {% endblock %}
+        </div>
+    </body>
+</html>
