--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -25,6 +25,7 @@
                 <a class="navbar-brand" href="/">Marvelus</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
+                    {% if user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="/accounts">Home</a></li>
                         <li><a href="/accounts/profile">Profile</a></li>
@@ -33,10 +34,14 @@
                         <li><a href="/accounts/reset-password">Reset Password</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/accounts/register">Register</a></li>
-                        <li><a href="/accounts/login">Login</a></li>
                         <li><a href="/accounts/logout">Logout</a></li>
                     </ul>
+                    {% else %}
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/accounts/register">Register</a></li>
+                        <li><a href="/accounts/login">Login</a></li>
+                    </ul>
+                    {% endif %}
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
