--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -27,19 +27,19 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     {% if user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-left">
-                        <li><a href="/accounts">Home</a></li>
-                        <li><a href="/accounts/profile">Profile</a></li>
-                        <li><a href="/accounts/profile/edit">Edit Profile</a></li>
-                        <li><a href="/accounts/change-password">Change Password</a></li>
-                        <li><a href="/accounts/reset-password">Reset Password</a></li>
+                        <li><a href="{% url 'accounts_home' %}">Home</a></li>
+                        <li><a href="{% url 'view_profile' %}">Profile</a></li>
+                        <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
+                        <li><a href="{% url 'change_password' %}">Change Password</a></li>
+                        <li><a href="{% url 'reset_password' %}">Reset Password</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/accounts/logout">Logout</a></li>
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
                     </ul>
                     {% else %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/accounts/register">Register</a></li>
-                        <li><a href="/accounts/login">Login</a></li>
+                        <li><a href="{% url 'register' %}">Register</a></li>
+                        <li><a href="{% url 'login' %}">Login</a></li>
                     </ul>
                     {% endif %}
                 </div><!--/.nav-collapse -->
