[session 32]: Make custom HTML email template

--- a/accounts/templates/jinja2tutor/tutor.html
+++ b/accounts/templates/jinja2tutor/tutor.html
@@ -8,3 +8,16 @@
 {% for item in seq -%}
     {{ item }}
 {%- endfor %}
+
+<!-- Escape a literal variable delimiter ({{}}) -->
+{{ '{{' }}
+
+<!-- For biggger sections, marka block 'raw' -->
+{% raw %}
+    <ul>
+        {% for item in seq %}
+            <li>{{ item }}</li>
+        {% endfor %}
+    </ul>
+{% endraw %}
+
