--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -26,17 +26,19 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     {% if user.is_authenticated %}
-                    <ul class="nav navbar-nav navbar-left">
+                    <ul class="nav navbar-nav">
                         <li><a href="{% url 'accounts:accounts_home' %}">Home</a></li>
                         <li><a href="{% url 'accounts:view_profile' %}">Profile</a></li>
                         <li><a href="{% url 'accounts:edit_profile' %}">Edit Profile</a></li>
                         <li><a href="{% url 'accounts:change_password' %}">Change Password</a></li>
-                        <li><a href="{% url 'accounts:reset_password' %}">Reset Password</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
                     </ul>
                     {% else %}
+                    <ul class="nav navbar-nav">
+                        <li><a href="{% url 'accounts:reset_password' %}">Reset Password</a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{% url 'accounts:register' %}">Register</a></li>
                         <li><a href="{% url 'accounts:login' %}">Login</a></li>
