--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,13 +5,31 @@
 <title>View Profile</title>
 {% endblock %}
 {% block body %}
-<p>
-    Username: {{ user }}
-    <br>
-    First name: {{ user.first_name }}
-    <br>
-    Last name: {{ user.last_name }}
-    <br>
-    Email address: {{ user.email }}
-</p>
+    <h2>Profile for {{ user.first_name }}</h2>
+    <p>
+        Username: {{ user }}
+    </p>
+    <p>
+        First name: {{ user.first_name }}
+    </p>
+    <p>
+        Last name: {{ user.last_name }}
+    </p>
+    <p>
+        City: {{ user.userprofile.city }}
+    </p>
+    <p>
+        Description: {{ user.userprofile.description }}
+    </p>
+    <p>
+        Phone: {{ user.userprofile.phone }}
+    </p>
+    <p>
+        Email address: {{ user.email }}
+    </p>
+    <p>
+        Website: {{ user.userprofile.website }}
+    </p>
+    
+    
 {% endblock %}
