--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,7 +5,7 @@
 <title>View Profile</title>
 {% endblock %}
 {% block body %}
-    <h2>Profile for {{ user.first_name }}</h2>
+    <h2>Welcome, {{ user.first_name }}</h2>
     <p>
         Username: {{ user }}
     </p>
@@ -30,6 +30,7 @@
     <p>
         Website: {{ user.userprofile.website }}
     </p>
+    <img src="{{ user.userprofile.image.url }}" alt="profile picture" width="240">
     
     
 {% endblock %}
