--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,4 +5,9 @@
 {% endblock %}
 {% block body %}
     <h1>Home page works!</h1>
+    <form action="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 {% endblock %}
