--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,9 +5,10 @@
 {% endblock %}
 {% block body %}
     <h1>Home page works!</h1>
-    <form action="post">
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <h2>{{ text }}</h2>
 {% endblock %}
