--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -13,7 +13,7 @@
     <h2>{{ text }}</h2>
     {% for post in posts %}
         <h3>{{ post.post }}</h3>
-        <p>Posted by {{ post.user.get_full_name }} on {{ post.date }}</p>
+        <p>Posted by {{ post.user.get_full_name }} on {{ post.created }}</p>
     {% endfor %}
     
 {% endblock %}
