--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,7 +7,8 @@
     <h1>Home page works!</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.post }}
+        <br>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <h2>{{ text }}</h2>
