--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,6 +4,7 @@
     <title>Home</title>
 {% endblock %}
 {% block body %}
+<div class="col-md-8">
     <h1>Home page works!</h1>
     <form method="post">
         {% csrf_token %}
@@ -16,5 +17,15 @@
         <h3>{{ post.post }}</h3>
         <p>Posted by {{ post.user.get_full_name }} on {{ post.created }}</p>
     {% endfor %}
+</div>
+<div class="col-md-4">
+    <h2>Other People</h2>
+    {% for user in users %}
+        <a href="{% accounts:view_profile %}">
+            <h3>{{ user.username }}</h3>
+        </a>
+    {% endfor %}
+</div>
+    
     
 {% endblock %}
