[session 53]: Pass a primary key through a Django URL

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -30,7 +30,8 @@
     <p>
         Website: {{ user.userprofile.website }}
     </p>
-    <img src="{{ user.userprofile.image.url }}" alt="profile picture" width="240">
-    
+    {% if userprofile.image.url %}
+        <img src="{{ user.userprofile.image.url }}" alt="profile picture" width="240">
+    {% endif %}
     
 {% endblock %}
